{
    "version": 1,
    "name": "StickInput",
    "maps": [
        {
            "name": "Stick",
            "id": "7f65ab53-ce0d-44d8-a880-cc283d6231bf",
            "actions": [
                {
                    "name": "UpArrow",
                    "type": "Button",
                    "id": "53a9f9ea-cde1-4fdc-add9-26f6f2624e61",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownArrow",
                    "type": "Button",
                    "id": "a5aa6876-78aa-404e-b73e-876bf438413b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArrow",
                    "type": "Button",
                    "id": "5b091a02-5fd5-426a-b8ab-0a0bb2eb68da",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArrow",
                    "type": "Button",
                    "id": "8615b06c-ea7b-4542-98f3-c4bea6aff2f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "83c379df-fec6-47e0-8237-5d7e33ebe399",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ff821706-b42b-4112-9672-3a0585aebad0",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "StickSch;StickSkim",
                    "action": "UpArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a79a736-a163-4eae-930c-1dbcf627ef5a",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "StickSch;StickSkim",
                    "action": "DownArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d02dbede-b641-49c3-a5cd-3485c4f5a4c7",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "StickSch;StickSkim",
                    "action": "LeftArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f6edc7f-ab7f-4355-b262-527773edf457",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "StickSch;StickSkim",
                    "action": "RightArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b361c297-8ef3-4816-b4c3-fd1a7a3ecdcb",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "StickSch;StickSkim",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "StickSkim",
            "bindingGroup": "StickSkim",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}